--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <packaging>jar</packaging>
     <groupId>org.webjars</groupId>
     <artifactId>startbootstrap-creative</artifactId>
-    <version>3.3.7+1-SNAPSHOT</version>
+    <version>3.3.7+1</version>
     <name>startbootstrap-creative</name>
     <description>WebJar for startbootstrap-creative</description>
     <url>http://webjars.org</url>
@@ -50,7 +50,7 @@
         <url>http://github.com/webjars/startbootstrap-creative</url>
         <connection>scm:git:https://github.com/webjars/startbootstrap-creative.git</connection>
         <developerConnection>scm:git:https://github.com/webjars/startbootstrap-creative.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>startbootstrap-creative-3.3.7+1</tag>
     </scm>
     
     <build>
@@ -79,13 +79,13 @@
                         <goals><goal>run</goal></goals>
                         <configuration>
                             <target>
-                                <echo message="download archive"/>
-                                <get src="${upstream.url}" dest="${project.build.directory}/${project.artifactId}.zip"/>
-                                <echo message="unzip archive"/>
-                                <unzip src="${project.build.directory}/${project.artifactId}.zip" dest="${project.build.directory}"/>
-                                <echo message="moving resources"/>
+                                <echo message="download archive" />
+                                <get src="${upstream.url}" dest="${project.build.directory}/${project.artifactId}.zip" />
+                                <echo message="unzip archive" />
+                                <unzip src="${project.build.directory}/${project.artifactId}.zip" dest="${project.build.directory}" />
+                                <echo message="moving resources" />
                                 <move todir="${destDir}">
-                                    <fileset dir="${project.build.directory}/${project.artifactId}-${upstream.dir}"/>
+                                    <fileset dir="${project.build.directory}/${project.artifactId}-${upstream.dir}" />
                                 </move>
                             </target>
                         </configuration>
